--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile 'org.seleniumhq.selenium:selenium-java:3.3.1'
-    testCompile 'io.github.bonigarcia:webdrivermanager:1.6.1'
+    compile group: 'junit', name: 'junit', version: '4.11'
+    compile 'org.seleniumhq.selenium:selenium-java:3.3.1'
+    compile 'io.github.bonigarcia:webdrivermanager:1.6.1'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-server', version: '2.45.0'
 }
