--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     compile 'org.seleniumhq.selenium:selenium-java:3.3.1'
     compile 'io.github.bonigarcia:webdrivermanager:1.6.1'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-server', version: '2.45.0'
+    compile group: 'ru.yandex.qatools.htmlelements', name: 'htmlelements-thucydides', version: '1.11'
 }
